--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
                     <li class="features-list-item">
                         <h3 class="features-list-title">Пунктуальность</h3>
                             <p class="features-list-description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                    </li class="features-list-item">
-                    <li>
+                    </li>
+                    <li class="features-list-item">
                         <h3 class="features-list-title">Планирование</h3>
                             <p class="features-list-description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                    </li class="features-list-item">
-                    <li>
+                    </li>
+                    <li class="features-list-item">
                         <h3 class="features-list-title">Современные технологии</h3>
                             <p class="features-list-description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
