Add hover&focus to footer contacts

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
             <address class="address-block">
                 <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
                 <ul class="contacts-footer-list">
-                    <li class="contacts-footer-item">info@example.com</li>
-                    <li class="contacts-footer-item">+38 099 111 11 11</li>
+                    <a class="contacts-footer-item" href="#"><li>info@example.com</li></a> 
+                    <a class="contacts-footer-item" href="#"><li>+38 099 111 11 11</li></a>
                 </ul>
             </address>
         </footer>
