Upgrade footer contacts

--- a/index.html
+++ b/index.html
@@ -108,8 +108,12 @@
             <address class="address-block">
                 <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
                 <ul class="contacts-footer-list">
-                    <a class="contacts-footer-item" href="#"><li>info@example.com</li></a> 
-                    <a class="contacts-footer-item" href="#"><li>+38 099 111 11 11</li></a>
+                    <li>
+                    <a class="contacts-footer-item" href="#">info@example.com</a> 
+                    </li>
+                    <li>
+                    <a class="contacts-footer-item" href="#">+38 099 111 11 11</a>
+                    </li>
                 </ul>
             </address>
         </footer>
