--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a lang="en" class="logo" href="./index.html">Web<span class="logo logo-studio">Studio</span></a>
             <ul class="navigation-list">
                 <li class="navigation-list-item">
-                    <a class="navigation-list-link" href="./index.html">Студия</a>
+                    <a class="current-link" href="./index.html">Студия</a>
                  </li>
                 <li class="navigation-list-item">
                     <a class="navigation-list-link" href="./portfolio.html">Портфолио</a>
